# infra-lite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  RELEASE_NOTES.md  spec.md
docs/: benchmarking_analysis.md  blog.md  features.md  parsing_framework_guide.md  parsing_review.md  positioning.md  roadmap.md
examples/benchmark/: main.cpp
examples/calculator/: calculator.cpp  calculator.h  main.cpp
examples/command_parser/: cmd_parser.cpp  cmd_parser.h  command.h  main.cpp
examples/error_example/: error_basics.h  main.cpp
examples/mini_config/: config.h  main.cpp  parser.cpp  parser.h
include/infra/: error.h  logging.h  version.h
include/infra/parsing/: chain.h  combinators.h  helpers.h  parser.h  primitives.h  result.h
include/infra/util/: char_stream.h  span.h  string_utils.h
tests/: test_calculator.cpp  test_combinators.cpp  test_error.cpp  test_framework.h  test_logging.cpp  test_span.cpp  test_string_utils.cpp
